# auster

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  sqlx-data.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yaml  config.yaml  feature-request.md  feature-request.yaml  suggestion.md
.github/workflows/: build-and-publish.yaml  check-and-lint.yaml  format.yaml  frontend.format.yaml  frontend.test.yaml
.github/workflows/rust/: check-and-lint.yaml
.github/workflows/svelte/: format.yaml
configuration/: base.yaml  production.yaml
deployments/: docker-compose.yml  init.sql
migrations/: 20230317225847_users.up.sql  20230318135351_categories.down.sql  20230318135351_categories.up.sql  20230318135354_rooms.down.sql  20230318135354_rooms.up.sql
src/: common.rs  config.rs  configuration.rs  lib.rs  main.rs  models.rs  startup.rs
src/api/: Cargo.toml  sqlx-data.json
src/api/src/: configuration.rs  startup.rs
src/api/src/authentication/: password.rs
src/authentication/: middleware.rs  password.rs
src/handlers/: auth.rs
src/models/: user.rs
src/routes/: health_check.rs  mod.rs
src/routes/auth/signin/: mod.rs  post.rs
src/routes/auth/signout/: logout.rs
src/routes/category/: categories.rs
src/routes/home/: home.html
src/routes/login/: post.rs
src/static/: sign in error.html  sign in.html
tests/: helpers.rs  main.rs
web/: .gitignore  package-lock.json  package.json  playwright-ct.config.ts
web/playwright/: index.ts
web/src/: App.svelte  SignIn.svelte
web/src/Components/: OutlinedInput.svelte
web/tests/: SignIn.test.ts
