[package]
name = "auster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-identity = "0.5.2"
actix-web-lab = "0.19.1"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
log = "0.4.17"
env_logger = "0.10.0"
