[package]
name = "auster"
version = "0.1.0"
edition = "2021"
authors = ["Okan Celik <okan@celik.tech>", "Claas Möhlmann <claas.möhlmann@outlook.com>"]

[[bin]]
path = "src/main.rs"
name = "auster"

[lib]
path = "src/lib.rs"

[dependencies]
actix-session = { version = "0.7.2", features = ["redis-rs-tls-session"] }
actix-web = "4.3.1"
actix-web-flash-messages = { version = "0.4.2", features = ["cookies"] }
actix-web-lab = "0.19.1"
actix-files = "0.6.2"
anyhow = "1.0.70"
argon2 = { version = "0.5.0", features = ["std"] }
base64 = "0.21.0"
chrono = { version = "0.4.24", default-features = false, features = ["clock"] }
config = { version = "0.13.3", default-features = false, features = ["yaml"] }
log = "0.4.17"
rand = { version = "0.8.5", features = ["std_rng"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = "1.0.157"
serde-aux = "4.1.2"
serde_json = "1.0.93"
sqlx = { version = "0.6.2", default-features = false, features = ["runtime-actix-rustls", "macros", "sqlite", "uuid", "chrono", "migrate", "offline"] }
thiserror = "1.0.40"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-actix-web = "0.7.3"
tracing-bunyan-formatter = "0.3.6"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"] }
uuid = { version = "1.3.0", features = ["v4", "serde"] }

[dev-dependencies]
cargo-sort = "1.0.9"
claims = "0.7.1"
fake = "2.5.0"
linkify = "0.9"
once_cell = "1.7.2"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
serde_json = "1.0.93"
serde_urlencoded = "0.7.1"
wiremock = "0.5.17"

